2017-11-23  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define findFrameByMessage function.
	Define genericListener.listeners.initializeBlankWindows function.
	Define initBlankWindow function.

	* tryXpath/scripts/try_xpath_functions.js:
	Define findFrameElement function.
	Define findFrameIndex function.

	* tryXpath/scripts/try_xpath_content.js:
	Remove findFrameElement function.

2017-11-22  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define genericListener.listeners.initializeBlankWindows function.

2017-11-18  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js:
	Define isBlankWindow function.
	Define collectBlankWindows function.

2017-11-16  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Rename function name. changeFrameVisible -> changeFrameIdVisible.
	Define frameDesignationHeader, frameDesignationCheckbox,
	frameDesignationBody, frameDesignationExpression variables.
	Define changeFrameDesignationVisible function.
	Save and restore some states related to frameDesignation.
	Modify makeExecuteMessage fucntion.

	* tryXpath/popup/popup.html (Main):
	Add some elements related frameDesignation.

	* tryXpath/popup/popup.js:
	Rename variables. frameHeader -> frameIdHeader, frameBody ->
	frameIdBody, frameCheckbox -> frameIdCheckbox.

	* tryXpath/popup/popup.html (Main):
	Rename ids.

2017-11-08  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Change version. 1.0.0 -> 1.1.0

	* tryXpath/scripts/try_xpath_content.js:
	Fix focusItem function.
	Define isFocusable function.
	Modify focusItem function.

2017-11-07  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Define helpCheckbox variable.
	Define changeHelpVisible function.
	Define helpBody variable.
	Fix sendToSpecifiedFrame function.

	* tryXpath/popup/popup.html (Main):
	Modify texts.
	Add the help-switch element.

	* tryXpath/popup/popup.js: